# email-triage-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  inference.py  openenv.yaml  pyproject.toml  validation_output.txt
server/: __init__.py  app.py  data.py  environment.py  models.py  requirements.txt  tasks.py
